# 3-package-sand_cat

./: Pipfile  README.md  demo.py  fortune.py  pyproject.toml  test_cat.py  test_draw.py  test_fortune.py
.github/workflows/: ci.yml
sandcat_fun/: __init__.py  cat.py  draw.py  snack.py  tip.py
tests/: test_cat.py  test_snack.py  test_tip.py
