[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sand-cat"
version     = "0.1.0"
description = "A playful cat-themed Python package with greeting, comfort, drawing, and fortune functions."
authors     = [
  { name = "Tuo Zhang", email = "tz2714@nyu.edu" },
  { name = "Hollan Yuan", email = "hwyuanzi@example.com"}, # <-- TODO: Fill with real info
  { name = "Teammate B", email = "xxx@xxx.com"}, # <-- TODO: Fill with real info
  { name = "Teammate C", email = "xxx@xxx.com"}, # <-- TODO: Fill with real info
  { name = "Teammate D", email = "xxx@xxx.com"}, # <-- TODO: Fill with real info
]
license     = "MIT"
readme      = "README.md"
keywords    = ["python", "package", "cat", "fun", "ascii"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["sandcat_fun*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["."]