[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sand-cat"
version     = "0.1.4"
description = "A playful cat-themed Python package with greetings, comfort, ASCII art, fortunes, and dramatic reactions to coding events."
authors     = [
  { name = "Tuo Zhang", email = "tz2714@nyu.edu" },
  { name = "Hollan Yuan", email = "hy2821@nyu.edu"},
  { name = "Eddy Yue", email = "yy4908@nyu.edu"},
  { name = "Owen Zhang", email = "oz2048@nyu.edu"}
]
license     = "MIT"
readme      = "README.md"
keywords    = ["python", "package", "cat", "fun", "ascii"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["sandcat_fun*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["."]